# Copyright 2026 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("//config.gni")
import("../../core/Lynx.gni")
import("../../testing/test.gni")

assert(enable_unittests)

group("lynx_service_api_testing") {
  testonly = true
  deps = [ ":lynx_service_api_static_unittests_exec" ]
}

testing_exec_sources = [ "service_api_test.cpp" ]

testing_impls = [
  "../../service_impls/testing/a:a_service_impl_src",
  "../../service_impls/testing/b:b_service_impl_src",
]

config("testing_exec_config") {
  defines = [ "TESTING=1" ]
  cflags = [ "-fexceptions" ]
}

# Testing the ServiceAPI framework in static linking mode
unittest_exec("lynx_service_api_static_unittests_exec") {
  sources = testing_exec_sources
  deps = testing_impls + [ "..:src_testset" ]
  configs = [ ":testing_exec_config" ]
  defines = [ "STATIC_LINK=1" ]
}
