# Copyright 2026 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../config.gni")
import("../../../core/Lynx.gni")

cmake_target("lynx_service_api_native") {
  target_type = "shared_library"
  output_name = "lynx_service_api"
  deps = [ "../../../service_api:src" ]
  configs = [ "../:16kb_page" ]
}
